--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,13 @@
-# Compiled class file
+# Archivos compilados
 *.class
 
-# Log file
+# Logs
 *.log
 
-# BlueJ files
-*.ctxt
+# Carpeta de compilación Maven
+/target/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
+# Artefactos empaquetados
 *.jar
 *.war
 *.nar
@@ -19,6 +16,19 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# Archivos crash JVM
 hs_err_pid*
 replay_pid*
+
+# IDEs
+.idea/
+*.iml
+out/
+.project
+.classpath
+.settings/
+.vscode/
+
+# Archivos sistema
+.DS_Store
+Thumbs.db
